navigating between all fragments in desired fashion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,16 @@ android {
     dataBinding {
         enabled = true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+    apply plugin: "androidx.navigation.safeargs.kotlin"
 }
 
 dependencies {
